UHF-9132: Fix missing initial value from the component-gap variable in content cards gray

--- a/src/scss/06_components/paragraphs/_content-cards.scss
+++ b/src/scss/06_components/paragraphs/_content-cards.scss
@@ -123,7 +123,7 @@ $-card-spacing: $spacing-and-half;
 .component--content-cards-grey {
   background: $color-silver-light;
   display: grid;
-  grid-template-columns: [full-width-start] var(--component-gap, #{$spacing}) [content-start] 1fr [content-end] var(--component-gap) [full-width-end] ;
+  grid-template-columns: [full-width-start] var(--component-gap, #{$spacing}) [content-start] 1fr [content-end] var(--component-gap, #{$spacing}) [full-width-end] ;
   grid-template-rows: [header-start] auto [header-end] auto;
   padding-top: 0;
 
